--- a/css/lista.css
+++ b/css/lista.css
@@ -1,43 +1,39 @@
-body{
+body {
   background-color: black;
   color: white;
   display: flex;
   justify-content: center;
 }
-.espacio-principal{
+.espacio-principal {
   display: block;
   height: auto;
 }
 .menu-contenedor {
   display: flex;
-  justify-content: center ;
-  
+  justify-content: center;
 }
-.img-carrito-caja{
+.img-carrito-caja {
   display: block;
   position: absolute;
-  right: 0 ;
+  right: 0;
   margin-right: 50px;
-  
 }
-.img-inicio{
-  
+.img-inicio {
   width: 200px;
-  height: 100px  ;
-  
+  height: 100px;
 }
-.img-carrito{
- 
- width: 30px;
- height: 30px  ;
+.img-carrito {
+  width: 30px;
+  height: 30px;
 }
-.impresion-principal{
+
+.impresion-principal {
   height: 500px;
 }
-.menu-titulo { 
+.menu-titulo {
   height: 50px;
-  width:  50px;
- }
+  width: 50px;
+}
 
 .contenedor-lista-carrito {
   display: block;
@@ -56,88 +52,86 @@ body{
   width: 100px;
 }
 
-.episodios-num, .precio-cap, .episodiosNum,.precio-prod,.eliminar {
+.episodios-num,
+.precio-cap,
+.episodiosNum,
+.precio-prod,
+.eliminar {
   width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.eliminar-img{
+.eliminar-img {
   width: 50px;
   cursor: pointer;
 }
-.boton-vaciar{
-border: 1px solid rgb(70, 70, 70);
-display: flex;
-align-items: center;
-justify-content: center;
-width: 100px;
-height: 50px;
-background-color: rgb(219, 54, 54);
-cursor: pointer;
+.boton-vaciar {
+  border: 1px solid rgb(70, 70, 70);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 50px;
+  background-color: rgb(219, 54, 54);
+  cursor: pointer;
 }
-.boton-vaciar:hover{
+.boton-vaciar:hover {
   background-color: rgb(255, 112, 112);
- }
-.total-lista { 
+}
+.total-lista {
   height: 50px;
   width: 50px;
- }
+}
 
-.boton-pagar { 
-    border: 1px solid rgb(70, 70, 70);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 50px;
-    background-color: rgb(82, 218, 111);
-    cursor: pointer;
-    color: white;
-   }
-   .boton-pagar:hover{
-    background-color: rgb(110, 248, 140);
-   }
-  a{
-  text-decoration:none;
- }
- .contenedor-lista-carrito{
-   width: 510px;
-   
- }
- .contenedor-impresion{
+.boton-pagar {
+  border: 1px solid rgb(70, 70, 70);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 50px;
+  background-color: rgb(82, 218, 111);
+  cursor: pointer;
+  color: white;
+}
+.boton-pagar:hover {
+  background-color: rgb(110, 248, 140);
+}
+a {
+  text-decoration: none;
+}
+.contenedor-lista-carrito {
+  width: 510px;
+}
+.contenedor-impresion {
   display: flex;
   justify-content: center;
   background-color: rgb(70, 70, 70);
   border: 10px double rgb(146, 146, 146);
+}
+.total-caja {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+}
 
-
- }
- .total-caja{
-   display: flex;
-   justify-content: center;
-   flex-direction: column;
-   align-items: center;
-   font-size: 20px;
- }
- 
- .botones-finales{
+.botones-finales {
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
-
- }
- .nombre{
+}
+.nombre {
   height: auto;
- }
-.nombre-foto{
+}
+.nombre-foto {
   height: auto;
   width: 100px;
   text-align: center;
 }
-img.miniatura{
+img.miniatura {
   width: 100px;
   height: auto;
 }
-
-
