--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,34 @@
-
 .menu-contenedor {
   display: flex;
   background-color: #1d3557;
   position: relative;
   justify-content: center;
-    
 }
 
-.imagen-de-bienvenida { 
-  grid-area: imagen-de-bienvenida; 
+.imagen-de-bienvenida {
+  grid-area: imagen-de-bienvenida;
   display: flex;
   justify-content: center;
   margin: 20px;
 }
-.imagen-entrada{
+.imagen-entrada {
   max-height: 70vh;
   max-width: 100%;
   display: block;
 }
-.img-anime{
+.img-anime {
   max-height: 70vh;
   max-width: 100%;
   margin: 20px;
 }
-.img-series{
+.img-series {
   max-height: 70vh;
   max-width: 100%;
   margin: 20px;
 }
-.img-inicio{
+.img-inicio {
   width: 200px;
-  height: 100px  ;
+  height: 100px;
 }
 
 .contenedor-categ {
@@ -38,58 +36,61 @@
   justify-content: center;
   background-color: #2a5c5e;
   margin-bottom: 20px;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
-body{
+body {
   background-color: #457b9d;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.pregunta{
+.pregunta {
   text-align: center;
   color: white;
 }
-.cont-pregunta{
+.cont-pregunta {
   display: flex;
   align-items: center;
 }
-.carrito{
+.carrito {
   width: 50px;
   position: fixed;
   right: 0;
   z-index: 2;
   margin: 20px;
 }
+.carrito:hover {
+  transform: scale(1.3);
+}
 .listado-general {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   margin: 20px;
-  background-color:#135a86 ;
+  background-color: #135a86;
   border-radius: 20px;
 }
-.miniatura{
+.miniatura {
   height: 100px;
   width: 100px;
   cursor: pointer;
-  }
-.cajita{
+}
+.cajita {
   width: 170px;
   display: block;
   text-align: center;
   color: white;
   margin: 20px;
-  }
+}
 
-  .contenedor-buscador{
-    color: white;
-    margin: 10px;
-  }
-  .barra{
-    width: 50vw;
-  }
-  
-.formulario-al-detalle{
+.contenedor-buscador {
+  color: white;
+  margin: 10px;
+}
+.barra {
+  width: 50vw;
+}
+
+.formulario-al-detalle {
   display: none;
   border: 3px solid red;
   width: auto;
@@ -98,131 +99,110 @@ body{
   position: fixed;
   z-index: 1;
   top: 10vh;
-  left:10vh;
+  left: 10vh;
   margin-right: 20px;
   border-radius: 20px;
-    
 }
 
 @media screen and (min-device-width: 0px) and (max-device-width: 550px) {
-  .descripcion-detalle{
+  .descripcion-detalle {
     font-size: 8px;
-    }
-    .foto-detalle-mod{
-      max-width: 100%;
-      min-width: 30px;
-      margin-right: 1px;
-      
-    }
-    
+  }
+  .foto-detalle-mod {
+    max-width: 100%;
+    min-width: 30px;
+    margin-right: 1px;
+  }
 }
 @media screen and (min-device-width: 549px) and (max-device-width: 768px) {
-  .descripcion-detalle{
+  .descripcion-detalle {
     font-size: 12px;
   }
 
-  .foto-detalle-mod{
+  .foto-detalle-mod {
     width: 10vw;
-    
   }
 }
 @media screen and (min-width: 769px) {
-  .descripcion-detalle{
+  .descripcion-detalle {
     font-size: 15px;
     width: 50vw;
   }
-  .foto-detalle-mod{
+  .foto-detalle-mod {
     width: 20vh;
-    
   }
-  
 }
-.nombre-detalle{
+.nombre-detalle {
   font-weight: bold;
-  }
+}
 
-  .foto-detalle{
-    display: flex;
-    align-items: center;
-    margin: 10px;
-    }
-.detalles-texto{
-  
+.foto-detalle {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+.detalles-texto {
   width: auto;
   margin-left: 20px;
   text-align: center;
   display: flex;
   align-content: space-between;
-  
-  
 }
-.contenedor-detalles{
+.contenedor-detalles {
   display: flex;
   justify-content: center;
-  align-items:stretch;
-  
-  
-  
+  align-items: stretch;
 }
-.centrar{
+.centrar {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   color: white;
 }
-.equis{
+.equis {
   width: 6vw;
   max-width: 35px;
   cursor: pointer;
-  
+
   text-align: right;
 }
-.alDetalle{
+.alDetalle {
   display: block;
   justify-content: right;
   position: absolute;
   right: 0;
-
 }
 
-.boton-detalle{
+.boton-detalle {
   border-radius: 5px;
-  max-width: 70%; 
-  
+  max-width: 70%;
 }
-.centrar-boton{
+.centrar-boton {
   display: flex;
   justify-content: center;
-
 }
-.producto-detalle{
+.producto-detalle {
   display: block;
 }
 
-
-
-
-.img-footer{
-    
+.img-footer {
   width: 8vw;
-        
 }
-footer{
+footer {
   display: flex;
   color: black;
   justify-content: space-around;
   align-items: center;
   background-color: white;
-  
 }
 a:hover {
-  
-  box-shadow: inset -1px 3px 8px 5px #1F87FF;}
-
-.nombre,.social{
-  
-  width: 8vw;
-  padding: 10px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  box-shadow: inset -1px 3px 8px 5px #1f87ff;
 }
 
+.nombre,
+.social {
+  width: 8vw;
+  padding: 10px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
